--- a/find_all_here/find_all_here/LoginView.xaml
+++ b/find_all_here/find_all_here/LoginView.xaml
@@ -38,6 +38,7 @@
                             <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
                         </Grid.RowDefinitions>
                         <Label Grid.Row="0"
                             Text="Find All Here"
@@ -56,29 +57,43 @@
                             Padding="10,0"
                             CornerRadius="5"
                             Background="{StaticResource bg-outline}">
-                            <Entry
-                                Placeholder="Usuario o correo electrónico"
-                                MaxLength="320"
-                                FontSize="16"
-                                TextColor="{StaticResource lbl-primary}"
-                                Text="{Binding EmailTxt, Mode=TwoWay}"
-                                IsEnabled="{Binding IsEnabledTxt}"
-                                HorizontalOptions="FillAndExpand"
-                                VerticalOptions="FillAndExpand"/>
+                            <StackLayout>
+                                <Label 
+                                    Margin="0,5,0,0"
+                                    Text="Usuario o correo electrónico"
+                                    FontSize="16"
+                                    TextColor="{StaticResource lbl-primary}"/>
+                                <Entry
+                                    Margin="0,-10,0,0"
+                                    MaxLength="320"
+                                    FontSize="16"
+                                    TextColor="{StaticResource lbl-primary}"
+                                    Text="{Binding EmailTxt, Mode=TwoWay}"
+                                    IsEnabled="{Binding IsEnabledTxt}"
+                                    HorizontalOptions="FillAndExpand"
+                                    VerticalOptions="FillAndExpand"/>
+                            </StackLayout>
                         </Frame>
                         <Frame Grid.Row="3"
                             Padding="10,0"
                             CornerRadius="5"
                             Background="{StaticResource bg-outline}">
-                            <Entry 
-                                Placeholder="Contraseña"
-                                IsPassword="True"
-                                FontSize="16"
-                                Text="{Binding PasswordTxt, Mode=TwoWay}"
-                                IsEnabled="{Binding IsEnabledTxt}"
-                                TextColor="{StaticResource lbl-primary}"
-                                HorizontalOptions="FillAndExpand"
-                                VerticalOptions="FillAndExpand"/>
+                            <StackLayout>
+                                <Label 
+                                    Margin="0,5,0,0"
+                                    Text="Contraseña"
+                                    FontSize="16"
+                                    TextColor="{StaticResource lbl-primary}"/>
+                                <Entry
+                                    Margin="0,-10,0,0"
+                                    IsPassword="True"
+                                    FontSize="16"
+                                    Text="{Binding PasswordTxt, Mode=TwoWay}"
+                                    IsEnabled="{Binding IsEnabledTxt}"
+                                    TextColor="{StaticResource lbl-primary}"
+                                    HorizontalOptions="FillAndExpand"
+                                    VerticalOptions="FillAndExpand"/>
+                            </StackLayout>
                         </Frame>
                         <Button Grid.Row="4"
                             Text="¿Olvidaste tu contraseña?"
