--- a/find_all_here/find_all_here/RegisterView.xaml
+++ b/find_all_here/find_all_here/RegisterView.xaml
@@ -100,7 +100,7 @@
                                     MaxLength="320"
                                     FontSize="16"
                                     TextColor="{StaticResource lbl-primary}"
-                                    Text="{Binding Txt_Names, Mode=TwoWay}"
+                                    Text="{Binding Txt_Surnames, Mode=TwoWay}"
                                     IsEnabled="{Binding IsEnabledTxt}"
                                     HorizontalOptions="FillAndExpand"
                                     VerticalOptions="FillAndExpand"/>
@@ -123,7 +123,7 @@
                                     MaxLength="320"
                                     FontSize="16"
                                     TextColor="{StaticResource lbl-primary}"
-                                    Text="{Binding Txt_Names, Mode=TwoWay}"
+                                    Text="{Binding Txt_Email, Mode=TwoWay}"
                                     IsEnabled="{Binding IsEnabledTxt}"
                                     HorizontalOptions="FillAndExpand"
                                     VerticalOptions="FillAndExpand"/>
@@ -144,6 +144,7 @@
                                     Margin="0,-10,0,0"
                                     FontSize="16"
                                     TextColor="{StaticResource lbl-primary}"
+                                    Date="{Binding Txt_BirthDate, Mode=TwoWay}"
                                     IsEnabled="{Binding IsEnabledTxt}"
                                     HorizontalOptions="FillAndExpand"
                                     VerticalOptions="FillAndExpand"/>
@@ -171,7 +172,7 @@
                                     Placeholder="Ingrese un nombre de usuario"
                                     IsPassword="True"
                                     FontSize="16"
-                                    Text="{Binding PasswordTxt, Mode=TwoWay}"
+                                    Text="{Binding Txt_Username, Mode=TwoWay}"
                                     IsEnabled="{Binding IsEnabledTxt}"
                                     TextColor="{StaticResource lbl-primary}"
                                     HorizontalOptions="FillAndExpand"
@@ -193,7 +194,7 @@
                                     Placeholder="Ingrese una contraseña segura"
                                     IsPassword="True"
                                     FontSize="16"
-                                    Text="{Binding PasswordTxt, Mode=TwoWay}"
+                                    Text="{Binding Txt_Password1, Mode=TwoWay}"
                                     IsEnabled="{Binding IsEnabledTxt}"
                                     TextColor="{StaticResource lbl-primary}"
                                     HorizontalOptions="FillAndExpand"
@@ -215,7 +216,7 @@
                                     Placeholder="Vuelva a ingresar su contraseña"
                                     IsPassword="True"
                                     FontSize="16"
-                                    Text="{Binding PasswordTxt, Mode=TwoWay}"
+                                    Text="{Binding Txt_Password2, Mode=TwoWay}"
                                     IsEnabled="{Binding IsEnabledTxt}"
                                     TextColor="{StaticResource lbl-primary}"
                                     HorizontalOptions="FillAndExpand"
@@ -231,7 +232,7 @@
                             BackgroundColor="{StaticResource btn-success}"
                             TextColor="{StaticResource lbl-primary}"
                             CornerRadius="10"
-                            Command="{Binding LoginCommand}"
+                            Command="{Binding SignUpCommand}"
                             IsEnabled="{Binding IsEnabledTxt}" />
                         <Button Grid.Row="11"
                             Margin="0"
