--- a/find_all_here/find_all_here/CartView.xaml
+++ b/find_all_here/find_all_here/CartView.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="find_all_here.ACarrito">
+             x:Class="find_all_here.CartView">
     <StackLayout BackgroundColor="{StaticResource bg-container}">
         <Grid Padding="10">
             <Grid.RowDefinitions>
