--- a/find_all_here/find_all_here/RegisterView.xaml
+++ b/find_all_here/find_all_here/RegisterView.xaml
@@ -187,7 +187,7 @@
                                         Margin="0,-10,0,0"
                                         FontSize="16"
                                         TextColor="{StaticResource lbl-primary}"
-                                        Text="{Binding Txt_BirthDay, Mode=TwoWay}"
+                                        Text="{Binding Txt_DateDay, Mode=TwoWay}"
                                         Placeholder="Día"
                                         Keyboard="Numeric"
                                         IsEnabled="{Binding IsEnabled}"
@@ -198,7 +198,7 @@
                                         Margin="0,-10,0,0"
                                         FontSize="16"
                                         TextColor="{StaticResource lbl-primary}"
-                                        Text="{Binding Txt_BirthMonth, Mode=TwoWay}"
+                                        Text="{Binding Txt_DateMonth, Mode=TwoWay}"
                                         Placeholder="Mes"
                                         IsEnabled="{Binding IsEnabled}"
                                         HorizontalOptions="FillAndExpand"
@@ -208,7 +208,7 @@
                                         Margin="0,-10,0,0"
                                         FontSize="16"
                                         TextColor="{StaticResource lbl-primary}"
-                                        Text="{Binding Txt_BirthYear, Mode=TwoWay}"
+                                        Text="{Binding Txt_DateYear, Mode=TwoWay}"
                                         Placeholder="Año"
                                         IsEnabled="{Binding IsEnabled}"
                                         HorizontalOptions="FillAndExpand"
