--- a/find_all_here/find_all_here/PagoView.xaml
+++ b/find_all_here/find_all_here/PagoView.xaml
@@ -2,11 +2,68 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="find_all_here.PagoView">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+    <StackLayout >
+
+        <Label Text="Online" FontSize="22" Margin="16,20,0,0" TextColor="White"/>
+        <Label Text="Puedes pagar con tarjeta de credito o debito." Margin="25,0,0,0" 
+               FontSize="18" TextColor="White"/>
+
+        <Grid Margin="10" >
+            <Button Text="Pagar por tarjeta" FontSize="20"
+                    BackgroundColor="#06284D" BorderWidth="3" BorderColor="#185AA0" 
+                    FontAttributes="Bold" HeightRequest="55" WidthRequest="230"
+                    VerticalOptions="Center" HorizontalOptions="Center"
+                    CornerRadius="16"/>
+        </Grid>
+
+        <Label Text="El monto del pedido se descontara de la tarjeta una vez que el envio sea confirmado." 
+               FontSize="18" Margin="25,0,16,10" TextColor="White"/>
+
+        <ScrollView HorizontalOptions="FillAndExpand">
+            <Grid RowSpacing="100" HorizontalOptions="FillAndExpand">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <StackLayout Spacing="0" HorizontalOptions="Center" VerticalOptions="Start">
+                    <Label Text="Medios de pago" TextColor="#F9B522"
+                           FontFamily="ThemeFont" FontSize="40" HorizontalOptions="Center"/>
+                </StackLayout>
+                <CarouselView Grid.Row="1" ItemsSource="{Binding DBCarritos}" BackgroundColor="#838383"
+                              HeightRequest="323" HorizontalOptions="FillAndExpand">
+                    <CarouselView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid HorizontalOptions="FillAndExpand">
+                                <Label Text="{Binding Name}" TextColor="#F9B522" FontSize="50" FontFamily="ThemeFont" 
+                                       HorizontalOptions="Center"/>
+                                <ImageButton Source="{Binding Image}" BackgroundColor="Black" 
+                                             CornerRadius="10" Aspect="Fill" Margin="25" 
+                                             HeightRequest="210" WidthRequest="235" 
+                                             HorizontalOptions="Center" VerticalOptions="End"/>
+                            </Grid>
+                        </DataTemplate>
+                    </CarouselView.ItemTemplate>
+                </CarouselView>
+                <ImageButton Grid.Row="1" Source="left.png" Margin="15,50,0,0" 
+                             Aspect="Fill" HeightRequest="18" WidthRequest="18" 
+                             HorizontalOptions="Start" VerticalOptions="Center" 
+                             BackgroundColor="Transparent"/>
+
+                <ImageButton Grid.Row="1" Source="right.png" Margin="0,50,15,0" 
+                             Aspect="Fill" HeightRequest="18" WidthRequest="18" 
+                             HorizontalOptions="End" VerticalOptions="Center" 
+                             BackgroundColor="Transparent" />
+            </Grid>
+        </ScrollView>
+
+        <Grid >
+            <Button Text="VOLVER" FontSize="16" TextColor="#fff"
+                    BackgroundColor="#414241 " BorderWidth="1" BorderColor="#737373  " 
+                    FontAttributes="Bold" HeightRequest="55" WidthRequest="145"
+                    VerticalOptions="Center" HorizontalOptions="Center"
+                    CornerRadius="9" />
+        </Grid>
+
+    </StackLayout>
 </ContentPage>
